[package]
name = "simoci"
version = "0.1.0"
edition = "2021"

[lib]
name = "simoci"

[dependencies]
oci-distribution = "0.9.4"
url = "2.3.1"
base64 = "0.21.0"
serde = { version = "1.0.151", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["blocking"] }
home = "0.5.5"
serde_yaml = "0.9.21"
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["rt-multi-thread"] }
log = "0.4.17"
anyhow = "1.0.70"
wasmparser = "0.103.0"
